--- a/my-app-redux/package.json
+++ b/my-app-redux/package.json
@@ -1,8 +1,7 @@
 {
   "name": "my-app-redux",
   "version": "0.1.0",
-  "homepage": "https://github-kayo.github.io/Carta",
-
+  "homepage": "https://kayohr.github.io/cartas",
   "private": true,
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
@@ -33,7 +32,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
