--- a/site-db/package.json
+++ b/site-db/package.json
@@ -5,16 +5,19 @@
   "private": true,
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@react-pdf/renderer": "^3.1.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "^3.8.6",
     "react-icons": "^4.7.1",
+    "react-pdf": "^6.2.2",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
